Implemented MongoDB with MongoDBDataSource.java
Signed-off-by: dumbdemon <20498145+dumbdemon@users.noreply.github.com>